--- a/requirements.txt
+++ b/requirements.txt
@@ -1,144 +1,148 @@
 astor==0.8.1
+autopep8==1.6.0
 coloredlogs==15.0.1
-decorator==5.1.0
-et-xmlfile==1.0.1
+decorator==5.1.1
+et-xmlfile==1.1.0
 fpdf==1.7.2
 future==0.18.2
 humanfriendly==10.0
 keyboard==0.13.5
 miniutils==1.0.3
-numpy==1.21.3
-openpyxl==3.0.7
-pandas==1.3.4
-peewee==3.14.4
-Pillow==8.2.0
+numpy==1.22.3
+openpyxl==3.0.9
+pandas==1.4.1
+peewee==3.14.10
+Pillow==9.0.1
 pragma==0.2.5
+pycodestyle==2.8.0
 PyContracts==1.8.12
-pyobjc==7.1
-pyobjc-core==7.1
-pyobjc-framework-Accounts==7.1
-pyobjc-framework-AddressBook==7.1
-pyobjc-framework-AdSupport==7.1
-pyobjc-framework-AppleScriptKit==7.1
-pyobjc-framework-AppleScriptObjC==7.1
-pyobjc-framework-ApplicationServices==7.1
-pyobjc-framework-AuthenticationServices==7.1
-pyobjc-framework-AutomaticAssessmentConfiguration==7.1
-pyobjc-framework-Automator==7.1
-pyobjc-framework-AVFoundation==7.1
-pyobjc-framework-AVKit==7.1
-pyobjc-framework-BusinessChat==7.1
-pyobjc-framework-CalendarStore==7.1
-pyobjc-framework-CFNetwork==7.1
-pyobjc-framework-CloudKit==7.1
-pyobjc-framework-Cocoa==7.1
-pyobjc-framework-Collaboration==7.1
-pyobjc-framework-ColorSync==7.1
-pyobjc-framework-Contacts==7.1
-pyobjc-framework-ContactsUI==7.1
-pyobjc-framework-CoreAudio==7.1
-pyobjc-framework-CoreAudioKit==7.1
-pyobjc-framework-CoreBluetooth==7.1
-pyobjc-framework-CoreData==7.1
-pyobjc-framework-CoreHaptics==7.1
-pyobjc-framework-CoreLocation==7.1
-pyobjc-framework-CoreMedia==7.1
-pyobjc-framework-CoreMediaIO==7.1
-pyobjc-framework-CoreMIDI==7.1
-pyobjc-framework-CoreML==7.1
-pyobjc-framework-CoreMotion==7.1
-pyobjc-framework-CoreServices==7.1
-pyobjc-framework-CoreSpotlight==7.1
-pyobjc-framework-CoreText==7.1
-pyobjc-framework-CoreWLAN==7.1
-pyobjc-framework-CryptoTokenKit==7.1
-pyobjc-framework-DeviceCheck==7.1
-pyobjc-framework-DictionaryServices==7.1
-pyobjc-framework-DiscRecording==7.1
-pyobjc-framework-DiscRecordingUI==7.1
-pyobjc-framework-DiskArbitration==7.1
-pyobjc-framework-DVDPlayback==7.1
-pyobjc-framework-EventKit==7.1
-pyobjc-framework-ExceptionHandling==7.1
-pyobjc-framework-ExecutionPolicy==7.1
-pyobjc-framework-ExternalAccessory==7.1
-pyobjc-framework-FileProvider==7.1
-pyobjc-framework-FileProviderUI==7.1
-pyobjc-framework-FinderSync==7.1
-pyobjc-framework-FSEvents==7.1
-pyobjc-framework-GameCenter==7.1
-pyobjc-framework-GameController==7.1
-pyobjc-framework-GameKit==7.1
-pyobjc-framework-GameplayKit==7.1
-pyobjc-framework-ImageCaptureCore==7.1
-pyobjc-framework-IMServicePlugIn==7.1
-pyobjc-framework-InputMethodKit==7.1
-pyobjc-framework-InstallerPlugins==7.1
-pyobjc-framework-InstantMessage==7.1
-pyobjc-framework-Intents==7.1
-pyobjc-framework-IOSurface==7.1
-pyobjc-framework-iTunesLibrary==7.1
-pyobjc-framework-LatentSemanticMapping==7.1
-pyobjc-framework-LaunchServices==7.1
-pyobjc-framework-libdispatch==7.1
-pyobjc-framework-LinkPresentation==7.1
-pyobjc-framework-LocalAuthentication==7.1
-pyobjc-framework-MapKit==7.1
-pyobjc-framework-MediaAccessibility==7.1
-pyobjc-framework-MediaLibrary==7.1
-pyobjc-framework-MediaPlayer==7.1
-pyobjc-framework-MediaToolbox==7.1
-pyobjc-framework-Metal==7.1
-pyobjc-framework-MetalKit==7.1
-pyobjc-framework-MetalPerformanceShaders==7.1
-pyobjc-framework-ModelIO==7.1
-pyobjc-framework-MultipeerConnectivity==7.1
-pyobjc-framework-NaturalLanguage==7.1
-pyobjc-framework-NetFS==7.1
-pyobjc-framework-Network==7.1
-pyobjc-framework-NetworkExtension==7.1
-pyobjc-framework-NotificationCenter==7.1
-pyobjc-framework-OpenDirectory==7.1
-pyobjc-framework-OSAKit==7.1
-pyobjc-framework-OSLog==7.1
-pyobjc-framework-PencilKit==7.1
-pyobjc-framework-Photos==7.1
-pyobjc-framework-PhotosUI==7.1
-pyobjc-framework-PreferencePanes==7.1
-pyobjc-framework-PushKit==7.1
-pyobjc-framework-Quartz==7.1
-pyobjc-framework-QuickLookThumbnailing==7.1
-pyobjc-framework-SafariServices==7.1
-pyobjc-framework-SceneKit==7.1
-pyobjc-framework-ScreenSaver==7.1
-pyobjc-framework-ScriptingBridge==7.1
-pyobjc-framework-SearchKit==7.1
-pyobjc-framework-Security==7.1
-pyobjc-framework-SecurityFoundation==7.1
-pyobjc-framework-SecurityInterface==7.1
-pyobjc-framework-ServiceManagement==7.1
-pyobjc-framework-Social==7.1
-pyobjc-framework-SoundAnalysis==7.1
-pyobjc-framework-Speech==7.1
-pyobjc-framework-SpriteKit==7.1
-pyobjc-framework-StoreKit==7.1
-pyobjc-framework-SyncServices==7.1
-pyobjc-framework-SystemConfiguration==7.1
-pyobjc-framework-SystemExtensions==7.1
-pyobjc-framework-UserNotifications==7.1
-pyobjc-framework-VideoSubscriberAccount==7.1
-pyobjc-framework-VideoToolbox==7.1
-pyobjc-framework-Vision==7.1
-pyobjc-framework-WebKit==7.1
-pyparsing==2.4.7
+pyobjc==8.4
+pyobjc-core==8.4
+pyobjc-framework-Accounts==8.4
+pyobjc-framework-AddressBook==8.4
+pyobjc-framework-AdSupport==8.4
+pyobjc-framework-AppleScriptKit==8.4
+pyobjc-framework-AppleScriptObjC==8.4
+pyobjc-framework-ApplicationServices==8.4
+pyobjc-framework-AudioVideoBridging==8.4
+pyobjc-framework-AuthenticationServices==8.4
+pyobjc-framework-AutomaticAssessmentConfiguration==8.4
+pyobjc-framework-Automator==8.4
+pyobjc-framework-AVFoundation==8.4
+pyobjc-framework-AVKit==8.4
+pyobjc-framework-BusinessChat==8.4
+pyobjc-framework-CalendarStore==8.4
+pyobjc-framework-CFNetwork==8.4
+pyobjc-framework-CloudKit==8.4
+pyobjc-framework-Cocoa==8.4
+pyobjc-framework-Collaboration==8.4
+pyobjc-framework-ColorSync==8.4
+pyobjc-framework-Contacts==8.4
+pyobjc-framework-ContactsUI==8.4
+pyobjc-framework-CoreAudio==8.4
+pyobjc-framework-CoreAudioKit==8.4
+pyobjc-framework-CoreBluetooth==8.4
+pyobjc-framework-CoreData==8.4
+pyobjc-framework-CoreHaptics==8.4
+pyobjc-framework-CoreLocation==8.4
+pyobjc-framework-CoreMedia==8.4
+pyobjc-framework-CoreMediaIO==8.4
+pyobjc-framework-CoreMIDI==8.4
+pyobjc-framework-CoreML==8.4
+pyobjc-framework-CoreMotion==8.4
+pyobjc-framework-CoreServices==8.4
+pyobjc-framework-CoreSpotlight==8.4
+pyobjc-framework-CoreText==8.4
+pyobjc-framework-CoreWLAN==8.4
+pyobjc-framework-CryptoTokenKit==8.4
+pyobjc-framework-DeviceCheck==8.4
+pyobjc-framework-DictionaryServices==8.4
+pyobjc-framework-DiscRecording==8.4
+pyobjc-framework-DiscRecordingUI==8.4
+pyobjc-framework-DiskArbitration==8.4
+pyobjc-framework-DVDPlayback==8.4
+pyobjc-framework-EventKit==8.4
+pyobjc-framework-ExceptionHandling==8.4
+pyobjc-framework-ExecutionPolicy==8.4
+pyobjc-framework-ExternalAccessory==8.4
+pyobjc-framework-FileProvider==8.4
+pyobjc-framework-FileProviderUI==8.4
+pyobjc-framework-FinderSync==8.4
+pyobjc-framework-FSEvents==8.4
+pyobjc-framework-GameCenter==8.4
+pyobjc-framework-GameController==8.4
+pyobjc-framework-GameKit==8.4
+pyobjc-framework-GameplayKit==8.4
+pyobjc-framework-ImageCaptureCore==8.4
+pyobjc-framework-IMServicePlugIn==8.4
+pyobjc-framework-InputMethodKit==8.4
+pyobjc-framework-InstallerPlugins==8.4
+pyobjc-framework-InstantMessage==8.4
+pyobjc-framework-Intents==8.4
+pyobjc-framework-IOSurface==8.4
+pyobjc-framework-iTunesLibrary==8.4
+pyobjc-framework-LatentSemanticMapping==8.4
+pyobjc-framework-LaunchServices==8.4
+pyobjc-framework-libdispatch==8.4
+pyobjc-framework-LinkPresentation==8.4
+pyobjc-framework-LocalAuthentication==8.4
+pyobjc-framework-MapKit==8.4
+pyobjc-framework-MediaAccessibility==8.4
+pyobjc-framework-MediaLibrary==8.4
+pyobjc-framework-MediaPlayer==8.4
+pyobjc-framework-MediaToolbox==8.4
+pyobjc-framework-Metal==8.4
+pyobjc-framework-MetalKit==8.4
+pyobjc-framework-MetalPerformanceShaders==8.4
+pyobjc-framework-ModelIO==8.4
+pyobjc-framework-MultipeerConnectivity==8.4
+pyobjc-framework-NaturalLanguage==8.4
+pyobjc-framework-NetFS==8.4
+pyobjc-framework-Network==8.4
+pyobjc-framework-NetworkExtension==8.4
+pyobjc-framework-NotificationCenter==8.4
+pyobjc-framework-OpenDirectory==8.4
+pyobjc-framework-OSAKit==8.4
+pyobjc-framework-OSLog==8.4
+pyobjc-framework-PencilKit==8.4
+pyobjc-framework-Photos==8.4
+pyobjc-framework-PhotosUI==8.4
+pyobjc-framework-PreferencePanes==8.4
+pyobjc-framework-PushKit==8.4
+pyobjc-framework-Quartz==8.4
+pyobjc-framework-QuickLookThumbnailing==8.4
+pyobjc-framework-SafariServices==8.4
+pyobjc-framework-SceneKit==8.4
+pyobjc-framework-ScreenSaver==8.4
+pyobjc-framework-ScriptingBridge==8.4
+pyobjc-framework-SearchKit==8.4
+pyobjc-framework-Security==8.4
+pyobjc-framework-SecurityFoundation==8.4
+pyobjc-framework-SecurityInterface==8.4
+pyobjc-framework-ServiceManagement==8.4
+pyobjc-framework-Social==8.4
+pyobjc-framework-SoundAnalysis==8.4
+pyobjc-framework-Speech==8.4
+pyobjc-framework-SpriteKit==8.4
+pyobjc-framework-StoreKit==8.4
+pyobjc-framework-SyncServices==8.4
+pyobjc-framework-SystemConfiguration==8.4
+pyobjc-framework-SystemExtensions==8.4
+pyobjc-framework-UserNotifications==8.4
+pyobjc-framework-VideoSubscriberAccount==8.4
+pyobjc-framework-VideoToolbox==8.4
+pyobjc-framework-Vision==8.4
+pyobjc-framework-WebKit==8.4
+pyparsing==3.0.7
 PyPDF2==1.26.0
-PyQt6==6.0.3
-PyQt6-Qt6==6.0.2
-PyQt6-sip==13.0.1
+PyQt6==6.2.3
+PyQt6-Qt6==6.2.3
+PyQt6-sip==13.2.1
 python-dateutil==2.8.2
 pytz==2021.3
-reportlab==3.5.67
+reportlab==3.6.8
 six==1.16.0
-tqdm==4.62.3
+toml==0.10.2
+tqdm==4.63.0
 xlrd==2.0.1
-XlsxWriter==1.4.2
+XlsxWriter==3.0.3
